Fix bottom button alignment

--- a/components/block_collection/stylesheets/block_collection.styl
+++ b/components/block_collection/stylesheets/block_collection.styl
@@ -142,6 +142,7 @@ body:not(.is-mobile) .grid__block:hover
   position absolute
   width 100%
   bottom 0
+  left 0
   display flex
   justify-content center
 
